# e_commerce_customer_ai_platform

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  doc.md  environment.yml  pyproject.toml  test.ipynb
.github/workflows/: ci.yml  nightly-pipeline.yml
customer_ai/: __init__.py  dataset.py  features.py  plots.py
customer_ai/features/: churn_features.py
customer_ai/modeling/: predict.py  train.py
dashboard/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
dashboard/public/: churn_dashboard_data.json  segment_summary.json
dashboard/src/: App.tsx  main.tsx
data/processed/: category_translation_clean.parquet  cltv_summary.parquet  geolocation_clean.parquet  order_payments_clean.parquet  products_clean.parquet  sellers_clean.parquet
docs/: mkdocs.yml
docs/docs/: index.md
flows/: build_customer_churn.py  build_customer_churn_master.py  build_customer_segments.py  build_customer_segments_master.py  clean_olist.py  feature_builders.py  ingest_olist.py  load_cleaned_to_db.py  load_raw_to_db.py
infra/: docker-compose.yml
models/churn/: best_churn_model_lightgbm.joblib
models/segmentation/: kmeans_k5.pkl
notebooks/: 0.0-victorwei-data-cleaning.ipynb  0.0.0-victorwei-data-processing-initial.ipynb  0.1.0-victorwei-data-processing-cusomter-segmentation.ipynb  0.2.0-victorwei-data-processing-customer-churn.ipynb  1.0-victorwei-feature-engineering.ipynb  1.0.0-victorwei-modeling-clustering-customer-segmentaion.ipynb  1.1.0-victorwei-modeling-3models-customer-churn.ipynb
scripts/: build_customer_churn.py
(+5 files in other folders)
